apps/arr-stack/lidarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: lidarr
  labels:
    servarr.app: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      servarr.app: lidarr
  template:
    metadata:
      labels:
        servarr.app: lidarr
    spec:
      # securityContext:
      #   runAsUser: 911
      #   runAsGroup: 911
      #   fsGroup: 911
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:latest
          ports:
            - containerPort: 8686
          volumeMounts:
            - name: data
              mountPath: /config
            - name: music
              mountPath: /music
            - name: sabnzbd-downloads
              mountPath: "/sabnzbd-downloads"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lidarr-data
        - name: music
          persistentVolumeClaim:
            claimName: jellyfin-music-pvc
        - name: sabnzbd-downloads
          persistentVolumeClaim:
            claimName: sabnzbd-downloads
