apps/arr-stack/lidarr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: lidarr
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector:
    servarr.app: lidarr
  ports:
    - port: 8686
      targetPort: 8686
  type: ClusterIP
